
* marks some incompatible change

 o Fixpoint: do not catch Not_found raised by a user-provided function.
 o Adding folds to BFS.

version 1.8.6, January 23, 2015
-------------------------------
 * Dominator: new functor [Make_graph] with may use graph building operations,
   while the old functor [Make] now only requires a read-only graph.
   Function [compute_all] and [compute_dom_graph] are now only defined in the
   new [Make_graph] functor.
 o Graphviz: support for additional polygonal-shapes
 o New module Clique (contributed by Giselle Reis)
 o Avoid ocamldoc error with OCaml 4.02
 * Path: function weight now has the more general type "edge -> t"
   (contributed by Steffen Smolka)
   update your code by turning "weight l" into "weight (G.E.label e)"
 o installation: "make install-findlib" now uses DESTDIR when defined
 o Traverse: documentation is clarified: providing iterators over the roots of
   the graph is enough.
 o Imperative concreate (di)graph: fix bug of functions add_edge* of imperative
   concrete (di)graphs which appears when the added edge [e] was already in the
   graph [g] and one of the vertices of [e] is equal to another vertex of [g]
   (when using the user-defined equality [G.V.equal]), but not physically equal
   to it. This bug only occurs with OCaml version >= 4.0.
 o functions in modules Components, Dominator, Flow, Topological and Traverse
   now create smaller auxiliary hash tables
 o Graphviz: add the attribute `HtmlLabel to specify html strings.

version 1.8.5, March 4, 2014
-----------------------------
 o Graphviz: reverted to the old API where edges and vertices are
   given a single style attribute; but such attributes are collected
   and output in the DOT file into a list (thus allowing multiple style
   attributes)
 o fixed issue in ./configure with ocamlfind on Win32.
 o fixed compilation when laglgnomecanvas is missing (bug introduced in 1.8.4).
 o fixed more issues with 'make -j'.

version 1.8.4, February 4, 2014